--- a/pages/advanced/index.mdx
+++ b/pages/advanced/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Windows
+title: Windows1
 description: Рассказываем, как настроить раздельное туннелирование для нужных приложений или сайтов в клиенте NekoRay
 ---
 
